--- a/proyecto_voluntariado/template/index.html
+++ b/proyecto_voluntariado/template/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Javier Perez" >
-
-    <!-- Le styles -->
     <link href="{{ MEDIA_URL }}css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
       body {
@@ -32,52 +30,27 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">   <!-- navbar-inverse fondo negro -->
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Voluntariado</a>
+          </a> 
+          <a class="brand" href="/"> <img src="{{MEDIA_URL}}img/logo.png" style="height: 80px;"/> </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
 				{% block panel %}{% endblock %}
             </ul>
-            <!--<form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
-              <input class="span2" type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-            </form> -->
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
+	<hr><hr>
     <div class="container">
 
 	  {% block principal %}{% endblock %}
-      <!-- Example row of columns -->
-      <!--
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div> -->
-
       <hr>
 
       <footer>
@@ -88,7 +61,6 @@
 
     <!-- Le javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ MEDIA_URL }}js/jquery.min.js"></script>
     
     <script src="{{ MEDIA_URL }}js/bootstrap.min.js"></script>
