--- a/proyecto_voluntariado/template/mail_success.html
+++ b/proyecto_voluntariado/template/mail_success.html
@@ -1,18 +1,15 @@
 {% extends 'index.html' %}
 
 {% block panel %}
-              <li class="active"><a href="#">Inicio</a></li>
-              <li><a href="#about">Acerca de</a></li>
-              <li><a href="#contact">Contáctanos</a></li>
+              <li class="active"><a href="../">Inicio</a></li>
+              <li><a href="../about/">Acerca de</a></li>
+              <li><a href="../contact/">Contáctanos</a></li>
 {% endblock %}
 
 {% block principal %}
       <div class="hero-unit">
         <h1>Gracias!</h1>
         <p>Pronto te tendremos noticias sobre los avances de este proyecto</p>
-		<p><a href = "../mails/"class="btn btn-primary btn-large">Regresar &raquo;</a></p>	
-            </form>        
-        
-        <!-- <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
+		<p><a href = "../"class="btn btn-primary btn-large">Regresar &raquo;</a></p>	
       </div>
 {% endblock %}              
