Modificaciones al modelo voluntario, unión con sistema de autenticación, falta restricción a escolaridad

--- a/proyecto_voluntariado/template/index.html
+++ b/proyecto_voluntariado/template/index.html
@@ -64,6 +64,7 @@
     <script src="{{ MEDIA_URL }}js/jquery.min.js"></script>
     
     <script src="{{ MEDIA_URL }}js/bootstrap.min.js"></script>
+    {% block scripts %}{% endblock %}
 
   </body>
 </html>
