Modificado form de voluntario, agregado el template para ong, no probado aún

--- a/proyecto_voluntariado/template/index.html
+++ b/proyecto_voluntariado/template/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Javier Perez" >
     <link href="{{ MEDIA_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ MEDIA_URL }}css/bootstrap-responsive.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
