--- a/proyecto_voluntariado/template/new_volunteer.html
+++ b/proyecto_voluntariado/template/new_volunteer.html
@@ -22,7 +22,7 @@
 		</div>
 	{% endif %}
 	<form class="form-horizontal" method="POST" action="." > {% csrf_token %}
-	<h1>Nuevo voluntario</h1>
+	<h1>{{ title }}</h1>
 	<legend>Por favor, complete los siguientes campos</legend>
 		{{ form }}
 		<br><br>
