--- a/proyecto_voluntariado/template/index.html
+++ b/proyecto_voluntariado/template/index.html
@@ -39,11 +39,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a> 
-          <a class="brand" href="/"> <img src="{{MEDIA_URL}}img/logo.png" style="height: 80px;"/> </a>
+          <a class="brand" href="/"> <img src="{{MEDIA_URL}}img/logo.png" style="height: 40px;"/> </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
 				{% block panel %}{% endblock %}
             </ul>
+            {% block signin %}{% endblock %}
           </div><!--/.nav-collapse -->
         </div>
       </div>
