--- a/proyecto_voluntariado/template/main.html
+++ b/proyecto_voluntariado/template/main.html
@@ -19,12 +19,19 @@
 {% block signin %}
 {% if log %}
 <p> Logged in as {{user.username}}</p>
+<form class="navbar-form pull-right" action="." method="POST">{% csrf_token %}<button type="submit" class="btn" value="logout" name="logout">Cerrar sesión</button></form>
 {% else %}
 <form class="navbar-form pull-right" action = "." method="POST">{% csrf_token %}
 	<input class="span2" type="text" class="input-small" placeholder="Usuario" name="username">
 	<input class="span2" type="password" class="input-small" placeholder="Contraseña" name = "password">
 	<button type="submit" class="btn" value="login" name="login">Iniciar sesión</button>
 </form>
+{% if invalid %}
+	<div class="alert alert-error span4">
+		<button type="button" class="close" data-dismiss="alert">x</button>
+		<p>Usuario y/o contraseña incorrectos</p>
+	</div>
+{% endif %}
 {% endif %}
 {% endblock %}
 
