--- a/proyecto_voluntariado/template/main.html
+++ b/proyecto_voluntariado/template/main.html
@@ -21,16 +21,19 @@
 <p> Conectado como {{user.username}}</p>
 <form class="navbar-form pull-right" action="." method="POST">{% csrf_token %}<button type="submit" class="btn" value="logout" name="logout">Cerrar sesión</button></form>
 {% else %}
-<form class="navbar-form pull-right" action = "." method="POST">{% csrf_token %}
+<form name="log" class="navbar-form pull-right" action = "." method="POST" onsubmit="return validation();">{% csrf_token %}
 	<input class="span2" type="text" class="input-small" placeholder="Usuario" name="username">
 	<input class="span2" type="password" class="input-small" placeholder="Contraseña" name = "password">
-	<button type="submit" class="btn" value="login" name="login">Iniciar sesión</button>
+	<button type="submit" class="btn" value="login" name="login" >Iniciar sesión</button>
 </form>
+
 {% if invalid %}
 	<div class="alert alert-error span4">
 		<button type="button" class="close" data-dismiss="alert">x</button>
 		<p>Usuario y/o contraseña incorrectos</p>
 	</div>
+{% else %}
+<div id="alertas"></div>
 {% endif %}
 {% endif %}
 {% endblock %}
@@ -83,4 +86,22 @@
   </div>
 </div>
 {% endif %}
+{% endblock %}
+
+
+{% block scripts %}
+<script>
+	function validation(){
+		document.log.username.value = document.log.username.value.toLowerCase();
+		var user = document.log.username.value,
+		pass = document.log.password.value;
+		if (user==null || user=='' || pass==null || pass==''){
+			if ($('#alerta1').length==0){
+				$('#alertas').append('<div id="alerta1" class="alert alert-error span4"><button type="button" class="close" data-dismiss="alert">x</button><p>Por favor agregue un usuario/contraseña</p></div>');
+			}
+			return false;
+		}
+		return true;
+	}
+</script>
 {% endblock %}
