--- a/proyecto_voluntariado/template/new_volunteer.html
+++ b/proyecto_voluntariado/template/new_volunteer.html
@@ -15,10 +15,12 @@
 {% endblock %}
 
 {% block principal %}
-
-<form class="well form-horizontal" method="POST" action="." > {% csrf_token %}
+<form name="form1" class="well form-horizontal" method="POST" action="." > {% csrf_token %}
 	<h1>{{ title }}</h1>
+	<button type="button" class="btn" id="linkedin_btn" onclick="linkedin();">Conéctate con Linked<img src="http://s3.licdn.com/scds/common/u/img/favicon_v3.ico"></button>
+	<div id="tokens"></div>
 	<legend>Por favor, complete los siguientes campos</legend>
+	
 	{% if error %}
 		<div class='alert alert-error'>
 			{{ error }}
@@ -32,7 +34,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 				<h3 id="myModalLabel">Nuevo Interés</h3>
 			</div>
-			<div class="modal-body">
+			<div class="well form-horizontal">
 				{{ interes }}
 			</div>
 			<div class="modal-footer">
@@ -44,27 +46,25 @@
 		
 		
 		
-</form>
-	
-<button type="button" class="btn" data-toggle="modal" data-target="#myModal">Launch demo modal</button>
-<div class="modal hide fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	<h3 id="myModalLabel">Modal header</h3>
-  </div>
-  <div class="modal-body">
-	<p>One fine body…</p>
-  </div>
-  <div class="modal-footer">
-	<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-	<button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
+</form>	
 {% endblock %}
 
 {% block scripts %}
 <script>
 	$('.errorlist').wrap('<div class="alert alert-error"></div>')
 	$('.alert.alert-error').prepend('<button type="button" class="close" data-dismiss="alert">x</button>')
+	var li_flag = false;
+	function linkedin(){
+		if (!li_flag){
+			li_flag = true;
+			$.get('/linkedin/', function(data){
+				$('#tokens').html(data);
+				$('#linkedin_btn').hide();
+			}
+			);
+		}
+			
+		
+	}
 </script>
 {% endblock %}
