--- a/proyecto_voluntariado/template/volunteer_profile.html
+++ b/proyecto_voluntariado/template/volunteer_profile.html
@@ -5,6 +5,7 @@
   <div class="row-fluid">
     <div class="span2">
       <!--Sidebar content-->
+      <img src="{{MEDIA_URL}}{{vol.foto}}" width="100px;"/>
       <h2>{{ vol.nombres }}, {{vol.apellidos}}</h2>
       <p><strong> Edad :</strong>{{ current }}</p>
     </div>
