--- a/proyecto_voluntariado/template/main.html
+++ b/proyecto_voluntariado/template/main.html
@@ -6,7 +6,7 @@
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Regístrate<b class="caret"></b>
 	</a>
 	<ul class="dropdown-menu">
-	<li><a href="/intereses/0/" >Voluntario</a></li>
+	<li><a href="/nuevovoluntario/" >Voluntario</a></li>
 	<li><a href="/intereses/1/" >Organización</a></li>
 	<li><a href="/intereses/2/" >Empresa Privada</a></li>
 	</ul>
@@ -17,10 +17,6 @@
 {% endblock %}
 
 {% block signin %}
-{% if log %}
-<p> Conectado como {{user.username}}</p>
-<form class="navbar-form pull-right" action="." method="POST">{% csrf_token %}<button type="submit" class="btn" value="logout" name="logout">Cerrar sesión</button></form>
-{% else %}
 <form name="log" class="navbar-form pull-right" action = "." method="POST" onsubmit="return validation();">{% csrf_token %}
 	<input class="span2" type="text" class="input-small" placeholder="Usuario" name="username">
 	<input class="span2" type="password" class="input-small" placeholder="Contraseña" name = "password">
@@ -35,60 +31,7 @@
 {% else %}
 <div id="alertas"></div>
 {% endif %}
-{% endif %}
 {% endblock %}
-
-{% block principal %}
-{% if log %}
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span2">
-      <!--Sidebar content-->
-      <h2>{{ vol.nombres }}, {{vol.apellidos}}</h2>
-      <p><strong> Edad :</strong>{{ current }}</p>
-    </div>
-    <div class="span10">
-      <h1>Especialidades</h1>
-      <table class="table table-striped">
-		  <thead>
-			  <tr>
-				  <th>Especialidad</th>
-				  <th>Descripción</th>
-			  </tr>
-		  </thead>
-		  <tbody>
-			{% for i in vol.especialidades.all %}
-			<tr>
-				<td>{{ i.nombre }}</td>
-				<td>{{ i.descripcion }}</td>
-			</tr>
-			{% endfor %}
-		  </tbody>
-      </table>
-      <h1>Favoritos</h1>
-      <table class="table table-striped">
-		  <thead>
-			  <tr>
-				  <th>Favorito</th>
-				  <th>Descripción</th>
-			  </tr>
-		  </thead>
-		  <tbody>
-			{% for i in vol.favoritos.all %}
-			<tr>
-				<td>{{ i.nombre }}</td>
-				<td>{{ i.descripcion }}</td>
-			</tr>
-			{% endfor %}
-		  </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-{% endif %}
-
-{% endblock %}
-
 
 {% block scripts %}
 <script>
